# ebookreader

./: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src-tauri/: 2  AGENTS.md  Cargo.toml  TODO.md  build.rs  diesel.toml  pg1513-images-3.epub
src-tauri/.github/: copilot-instructions.md
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  lib.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/commands/: annotation_commands.rs  book_commands.rs  (+5 more)
src-tauri/src/application/: annotation.rs  book.rs  bookmark.rs  get_book.rs  get_cover.rs  import_book.rs  list_books.rs  manage_reading_progress.rs  mod.rs  read_book.rs  reading_progress.rs  remove_book.rs  scan_directory.rs  state.rs
src-tauri/src/commands/: account_commands.rs  auth_command.rs  book_commands.rs  library_commands.rs  metadata_commands.rs  mod.rs
src-tauri/src/controllers/: auth_controller.rs  book_controller.rs  reading_progress_controller.rs  user_controller.rs
src-tauri/src/data/: database.rs
src-tauri/src/domain/: error.rs  mod.rs  repository.rs
src-tauri/src/handlers/: epub_handler.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/services/: authentication_service.rs  book_service.rs  library_service.rs  token_service.rs
src-tauri/src/utils/: deserializers.rs  file.rs  mappers.rs  mod.rs  response.rs  serializers.rs
src-tauri/tests/: README.md  book_author_repo_tests.rs  book_repo_tests.rs  epub_handler_tests.rs  image_processing_test.rs  pdf_handler_tests.rs  service_tests.rs  user_library_repo_tests.rs  user_repo_tests.rs
(+142 files in other folders)
